--- a/package.json
+++ b/package.json
@@ -46,15 +46,17 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.14.3",
     "eslint-plugin-react-hooks": "^2.0.1",
+    "emotion": "^10.0.27",
     "flow-bin": "^0.108.0",
-    "graphql": "^14.5.8",
     "react": "^16.9.0",
-    "react-apollo": "^3.1.1",
     "react-dom": "^16.9.0",
     "react-hot-loader": "^4.12.14",
     "webpack": "^4.41.0",
     "webpack-cli": "^3.3.9",
     "webpack-dev-server": "^3.8.1",
+    "file-loader": "^6.0.0",
+    "style-loader": "^1.1.4",
+    "css-loader": "^3.5.2",
     "cz-conventional-changelog": "^3.1.0"
   },
   "config": {
