--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "dependencies": {},
   "peerDependencies": {
     "react": "^16.9.0",
-    "react-dom": "^16.9.0"
+    "react-dom": "^16.9.0",
+    "emotion": "^10.0.27"
   },
   "devDependencies": {
     "@babel/cli": "^7.8.4",
